add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>cghndouimn pwyoifrbmy wqhpilxeie yftcabekgl ugwisebalh drmwkfkaqp hbagtubvtv syjkppdyrq</div>
+  <div>dxcslvsdgh cngixdgikh</div>
 </body>
 </html>
