add code in files types: .html,.ts,.scss remove code in files types: .html,.ts,.scss

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>iquqwswdeo tgxlhlljeb nhuqfvqofq</div>
+  <div>hjyjrqcsxp pvhwlqmclc kcxpoosipk ykmphyqchv ccktfuumvv pokcypkucb uatdmemhla</div>
 </body>
 </html>
