add code in files types: .html,.ts,.scss remove code in files types: .html,.ts

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>nihgbumetr ynjedvgcrg</div>
+  <div>xfqqhopjit gyyfreflak nupnuqqgsq omuhqgmqkv hqkglqcuna wthcdrifrj wupdyhbqmx mvffwgirjq</div>
 </body>
 </html>
