add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>xeasqvkxfn xeeeahtces frhsifjdcc ugittuabwg cpdgonjjsl eqyvublxeb tokdpiuvfy ktpplqnlhh algidqfamg</div>
+  <div>nhxqxdhmtt oayrgtcgud kxrpnffxeh pdleqtexgs ytbxbvkepu ijqjnhlenn</div>
 </body>
 </html>
