add code in files types: .html,.scss,.ts remove code in files types: .html,.scss

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>kiynmuoruw ccydyllwqj nakivxtsot xdkinuuqeh amgkoqvkgj ksnjwtaseb ddushexhil ewckubssgk gvlktcwwqa</div>
+  <div>slbrqxysxj pgfwwoqcjc fyijryqpqa xwtyhglikd eosesagehh cgtxcjgera hpcyoxahqp injxljhaja</div>
 </body>
 </html>
