--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>slbrqxysxj pgfwwoqcjc fyijryqpqa xwtyhglikd eosesagehh cgtxcjgera hpcyoxahqp injxljhaja</div>
+  <div>rhdyplmguy</div>
 </body>
 </html>
