add code in files types: .html,.scss remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>rhdyplmguy</div>
+  <div>cmiswykttw tvttkvdual lcekxttntm evuanclkhj lbcxkoieij wrslixtdai vkyeknnyqr fcxkurddod</div>
 </body>
 </html>
