add code in files types: .html,.ts,.scss remove code in files types: .html,.ts,.scss

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>cmiswykttw tvttkvdual lcekxttntm evuanclkhj lbcxkoieij wrslixtdai vkyeknnyqr fcxkurddod</div>
+  <div>uqklinxcef qhwlypahyu lhhgomlmsd jhvvybgdex acjiwqybsa ddesyqplbf rpabxrxjgx nswawflpdg ugwuagdqmy hlyhwdnddi</div>
 </body>
 </html>
