add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>uqklinxcef qhwlypahyu lhhgomlmsd jhvvybgdex acjiwqybsa ddesyqplbf rpabxrxjgx nswawflpdg ugwuagdqmy hlyhwdnddi</div>
+  <div>gnsxmmpdac rytwndagdn fociymlffr guctqstdmv kbfvphfoaw rmuvukhepm</div>
 </body>
 </html>
