add code in files types: .html,.scss,.ts,.css,.map,.svg remove code in files types: .html,.scss,.ts,.css,.map,.svg

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>gnsxmmpdac rytwndagdn fociymlffr guctqstdmv kbfvphfoaw rmuvukhepm</div>
+  <div>ybijjgqpke ogemhjskvo fmwfeerwuw bhaerkgatr byfvxvsvpp gkgkpfklox smnxaoboix</div>
 </body>
 </html>
