add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>ybijjgqpke ogemhjskvo fmwfeerwuw bhaerkgatr byfvxvsvpp gkgkpfklox smnxaoboix</div>
+  <div>ciaapvqtow caklolytvx dkkeyepxcl idirkfnaxr jyhqauugsj hhvroausvj cqfjlnqfgy</div>
 </body>
 </html>
