add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>awqlusrfjv uhuooqhjus uyfalfctrf mitjfowtlg</div>
+  <div>tjurjfvbqo vmpwchonbm ibkdiifekt aimkgyxrrs wfpoxrchqo wethdbytrh</div>
 </body>
 </html>
