add code in files types: .json,.html,.scss,.ts,.css,.map,.svg remove code in files types: .json,.html,.scss,.ts,.css,.map,.svg

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>tjurjfvbqo vmpwchonbm ibkdiifekt aimkgyxrrs wfpoxrchqo wethdbytrh</div>
+  <div>tcnkcwwqgl hshuofoxkj rymfxusgrv aobqbmpigb pvbhjqvbdy nvvqvygsjm vaowqyvqfn nbgdxmynos mkkagjgaka</div>
 </body>
 </html>
