add code in files types: .html,.ts remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>tcnkcwwqgl hshuofoxkj rymfxusgrv aobqbmpigb pvbhjqvbdy nvvqvygsjm vaowqyvqfn nbgdxmynos mkkagjgaka</div>
+  <div>lbfofgbvlo apgcdckhmg fcbqnxnafh iorghinbnp</div>
 </body>
 </html>
