add code in files types: .html,.scss,.ts remove code in files types: .html,.scss,.ts

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>ggylrwjvci hfdmkppwmy vxpcqnurou sljwjbvhso jdjxewpcpg meshakvmnc</div>
+  <div>dyvxlpngdi ofnrffblag thdmrtmhep gxqqprypaj wongisapfy mbrmsuypca mscpryhrpe unetjejpct</div>
 </body>
 </html>
