add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head></head>
 <body>
-  <div>dyvxlpngdi ofnrffblag thdmrtmhep gxqqprypaj wongisapfy mbrmsuypca mscpryhrpe unetjejpct</div>
+  <div>wbgmvtuldt wuqmyomlcx</div>
 </body>
 </html>
