add code in files types: .json,.ts,.html,.scss remove code in files types: .ts

--- a/content.html
+++ b/content.html
@@ -3,5 +3,6 @@
 <head></head>
 <body>
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
+  <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
 </body>
 </html>
