add code in files types: .html,.ts remove code in files types: .ts

--- a/content.html
+++ b/content.html
@@ -4,5 +4,6 @@
 <body>
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
+  <div>psjhluxjoa xroquqmbix hangduvrgc skcoijuvgp itoftsmscf pxdjuqtiqo rtpsdnsubw odfarohahh uttoyhrhsp</div>
 </body>
 </html>
