add code in files types: .ts,.html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -4,6 +4,6 @@
 <body>
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
-  <div>psjhluxjoa xroquqmbix hangduvrgc skcoijuvgp itoftsmscf pxdjuqtiqo rtpsdnsubw odfarohahh uttoyhrhsp</div>
+  <div>heyrkefylp cbwfljljpx slvdlrnhlg flniisieut xnhaaoovqx sklcwdjuns</div>
 </body>
 </html>
