add code in files types: .json,.ts,.html,.scss remove code in files types: .ts,.html

--- a/content.html
+++ b/content.html
@@ -4,6 +4,6 @@
 <body>
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
-  <div>yhcifcasxq pjfksdburd ktdwuyweru umapmytptx jiregxeteq tyckpovqye</div>
+  <div>jhrygcovie uxyeoacifx ykgborhfnn jcejdwwxuy xkuvxdlorx</div>
 </body>
 </html>
