add code in files types: .html,.scss,.ts remove code in files types: .html,.scss,.ts

--- a/content.html
+++ b/content.html
@@ -4,6 +4,6 @@
 <body>
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
-  <div>rjopklaaaq dqiesmoyan dhndofkjyg hbtmfqkywn owcroclopf</div>
+  <div>oooujgirhw ewidhytlos ntqmcjkygh rexncdwrgv ixbdfqmlmq afvlrnfanx xruvtujynj nkpmaopilm wkuoftukeh</div>
 </body>
 </html>
