add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -4,6 +4,6 @@
 <body>
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
-  <div>dttdoxhprq ntvcewbofe semtqmxqli ctnjfnqmce ulscasnndp eooglscnim qkceytmskn jrgbbmqsws hgwffvuilr</div>
+  <div>dfcfdbvrvu panltcynvs wjixskmufw</div>
 </body>
 </html>
