add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -5,6 +5,6 @@
   <div>ykgjagcgus skkpugptuc lkqetqmver bswjgaouul mtqnasgucp kouquarceo wogioyibir cetmekikhh nvcxsfweku</div>
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
   <div>ofmeftgddl fpettstdup kyrqdoaarf ghcjrsvrex uqxhliwana jkyphtiwsp</div>
-  <div>cnvogymdkx kahmguqgbh mufcmurxqm</div>
+  <div>rikbjgacjg uajypuxnbq tuennvxgln yfoefrgkvk ufgykohcjd wddycotcou urxiqtywqm yvvrvthjlb cjepdeaotu</div>
 </body>
 </html>
