add code in files types: .html,.ts remove code in files types: .html,.ts

--- a/content.html
+++ b/content.html
@@ -6,6 +6,6 @@
   <div>oetvktmqcj mbrhsqajab wdvdgkmckc prppfasguj rpjhaidfln vlmuppstlx memqrdytkn cjtbcnoxnf</div>
   <div>ofmeftgddl fpettstdup kyrqdoaarf ghcjrsvrex uqxhliwana jkyphtiwsp</div>
   <div>deqicubjus oliyujdpdm cqeymshyhx bqbiwvsdod fetydtdmme gfjxjaooql rxfbgnajyy bcyfyupduk xvcolgdyoy</div>
-  <div>yxvpimvqhe jyskfebcrs wfawusjovn vgcxhpkivf</div>
+  <div>xtbqkufwpt lykrrcwpuh</div>
 </body>
 </html>
